# robo_magellan

./: README.md
robo_magellan/: .cproject  .gitignore  .project  README.md
robo_magellan/.tracecompass/: .project
robo_magellan/protos/: .gitignore  CMakeLists.txt  README  telemetry_service.grpc.pb.cc  telemetry_service.grpc.pb.h  telemetry_service.pb.cc  telemetry_service.pb.h  telemetry_service.proto
robo_magellan/src/bbahrs/: .gitignore  MadgwickAHRS.c  MadgwickAHRS.h  MahonyAHRS.c  MahonyAHRS.h  madgwick_mahony_common.c  madgwick_mahony_common.h
robo_magellan/src/controller/: .imu  Attitude.h  CMakeLists.txt  TelemetryServiceImpl.cpp  TelemetryServiceImpl.h  TelemetryTestService.cpp  active_objects.cpp  active_objects.h  aosp.cpp  aosp.h  blinky.h  bsp.cpp  bsp.h  imu.qm  main.cpp  qp_plugs.cpp
robo_magellan/src/qpcpp/ports/posix/: qf_port.cpp  qf_port.h
robo_magellan/src/telemetry_service_client/: README  build.sh  client.py  streaming_client.py  telemetry_service_pb2.py  telemetry_service_pb2_grpc.py  vpython_streaming_client.py
robo_magellan/src/util/: CircularBuffer.cpp  CircularBuffer.h  bsp_helpers.h
robo_magellan/testcases/: AOSPTests.cpp  CircularBufferTests.cpp  DSMTests.cpp  EDUMotorTests.cpp  FileUnderTest.h  LedGPSTests.cpp  MadgwickTests.cpp  MotorTests.cpp  PWMTests.cpp  SampleTest.cpp
robo_magellan/tests/: AllTests.cpp
